# NetworkMiddleware

./: .coderabbit.yaml  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists.txtnano  DESIGN_PROPOSALS.md  DEVELOPMENT_MEMORY.md  Dockerfile  HANDOFF_TEMPLATES.md  HOME.md  README.md  docker-compose.yml  install.ps1  install.sh
.github/workflows/: cd.yml  ci.yml
Brain/: BehaviorTree.cpp  BehaviorTree.h  BrainManager.cpp  BrainManager.h  CMakeLists.txt  KalmanPredictor.cpp  KalmanPredictor.h  NeuralProcessor.cpp  NeuralProcessor.h  PriorityEvaluator.cpp  PriorityEvaluator.h
Brain/Interfaces/: IBehaviorEngine.h  IDataProcessor.h
Core/: AsyncSendDispatcher.cpp  AsyncSendDispatcher.h  BotClient.cpp  BotClient.h  CMakeLists.txt  GameWorld.cpp  GameWorld.h  HitValidator.cpp  HitValidator.h  JobSystem.cpp  JobSystem.h  NetworkManager.cpp  NetworkManager.h  NetworkProfiler.cpp  NetworkProfiler.h  PacketManager.cpp  PacketManager.h  RemoteClient.cpp  RemoteClient.h  SpatialGrid.cpp  SpatialGrid.h  VisibilityTracker.cpp  VisibilityTracker.h
HeadlessBot/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
Shared/: CMakeLists.txt  GameplayConstants.h  INetworkable.h  ITransport.cpp  ITransport.h  NetworkAddress.cpp  NetworkAddress.h  TransportType.h
Shared/Data/: HeroState.h
Shared/Data/Network/: HeroSerializer.cpp  HeroSerializer.h  NetworkOptimizer.cpp  NetworkOptimizer.h
Shared/Gameplay/: BaseHero.cpp  BaseHero.h  HeroDirtyBits.h  IHero.h  ViegoEntity.cpp  ViegoEntity.h
Shared/Log/: LogChannel.h  LogEntry.h  LogLevel.h  Logger.cpp  Logger.h
Shared/Network/: HandshakePackets.h  InputPackets.h  PacketHeader.cpp  PacketHeader.h  PacketTypes.h
Shared/Serialization/: BitReader.cpp  BitReader.h  BitWriter.cpp  BitWriter.h  CRC32.h
Transport/: CMakeLists.txt  RawUDPTransport.cpp  RawUDPTransport.h  SFMLTransport.cpp  SFMLTransport.h  TransportFactory.cpp  TransportFactory.h
_templates/: Design Handoff.md  Dev Log Alex.md  Implementation Report.md
benchmarks/: README.md
benchmarks/results/: 2026-03-22_21h17_aaf2667.md  azure_2026-03-27_01h33_6bb76b8.md  azure_2026-03-27_01h38_6bb76b8.md  azure_2026-03-27_01h42_6bb76b8.md  azure_2026-03-27_01h46_6bb76b8.md  azure_2026-03-27_02h05_6bb76b8.md  azure_2026-03-27_02h27_6bb76b8.md  azure_2026-03-27_02h29_6bb76b8.md  azure_2026-03-27_02h33_6bb76b8.md  azure_2026-03-27_02h36_6bb76b8.md  azure_2026-03-27_23h16_6bb76b8.md  azure_2026-03-27_23h29_6bb76b8.md  azure_2026-03-27_23h40_6bb76b8.md  azure_2026-03-27_23h44_6bb76b8.md  azure_2026-03-28_21h32_5120e71.md  final_2026-03-24_00h46_1d397d0.md  final_2026-03-28_20h14_55bb44e.md  final_2026-03-28_20h21_55bb44e.md  final_2026-03-28_21h01_55bb44e.md  final_2026-03-28_21h06_55bb44e.md  fow_2026-03-28_21h54_5120e71.md  fow_azure_2026-03-28_22h19_066126a.md  p5_regression_2026-03-25_10h45_7b73992.md  p5_regression_2026-03-25_11h10_7b73992.md  p5_regression_2026-03-25_11h37_7b73992.md  p5_regression_2026-03-25_12h22_cb62ad3.md  p5_regression_2026-03-25_13h08_cb62ad3.md
proposals/: P-3.1 ACK Bitmask.md  P-3.2 Client-Side Prediction.md  P-3.3 Jitter Buffer.md  P-3.4 Reliability Tercer Canal.md  P-3.5 Server Input Validation.md  P-4.1 Adaptive Tick-Rate.md  P-4.2 Thread Pool Model.md  P-5.1 Spatial Hashing.md  P-5.2 IA Predictiva Model.md  P-5.3 Entity Tier Replication.md  P-5.4 Input Validation Avanzada.md  P-6.1 Entity Interpolation.md  P-6.2 Reconciliation Visual.md  P-T.1 Snapshot vs Lockstep.md  P-T.2 Bibliografia.md
reports/: TEMPLATES.md
reports/Fase 3/: DL-3.1 ACK Bitmask.md  DL-Fase 3 — Netcode Core & Session Protocol.md  IR-3.1 ACK Bitmask.md
reports/Fase 3/P-3.1 ACK Bitmask/: DL-3.1 ACK Bitmask.md  DL-3.1b ACK Bitmask (iteracion 2).md  IR-3.1b ACK Bitmask (iteracion 2).md
reports/Fase 3/P-3.2 Connection Handshake/: DL-3.2 Connection Handshake.md  IR-3.2 Connection Handshake.md
reports/Fase 3/P-3.3 Reliability Layer/: DL-3.3 Reliability Layer.md  IR-3.3 Reliability Layer.md
reports/Fase 3/P-3.4 Clock Sync & RTT/: DL-3.4 Clock Sync & RTT.md  IR-3.4 Clock Sync & RTT.md
reports/Fase 3/P-3.5 Delta Compression/: DL-3.5 Delta Compression.md  IR-3.5 Delta Compression.md
reports/Fase 3/P-3.6 Session Recovery/: DL-3.6 Session Recovery.md  IR-3.6 Session Recovery.md
reports/Fase 3/P-3.7 Minimal Game Loop/: DL-3.7 Minimal Game Loop.md  IR-3.7 Minimal Game Loop.md
reports/Fase 4/: DL-Fase 4 — Simulation Infrastructure & Stress Test.md
reports/Fase 4/P-4.1+4.2 Simulation Infrastructure/: DL-4.1+4.2 Simulation Infrastructure.md  IR-4.1+4.2 Simulation Infrastructure.md
reports/Fase 4/P-4.3 Stress Test/: DL-4.3 Stress Test.md  IR-4.3 Stress Test.md
reports/Fase 4/P-4.4 Dynamic Job System/: DL-4.4 Dynamic Job System.md  IR-4.4 Dynamic Job System.md
reports/Fase 4/P-4.5 Packet Integrity/: DL-4.5 Packet Integrity.md  IR-4.5 Packet Integrity.md
reports/Fase 5/: DL-Fase 5 — AI Layer & Advanced Replication.md
reports/Fase 5/P-5.1 Spatial Hashing FOW/: DL-5.1 Spatial Hashing FOW.md  IR-5.1 Spatial Hashing FOW.md
reports/Fase 6/: DL-Fase 6 — Server IO Optimization.md
reports/Transversal/: Analisis-Legacy-AA4-Shooter2D.md
scripts/: azure_integration_test.sh  azure_smoke_test.sh  deploy.sh  run_azure_benchmark.sh  run_benchmarks.sh  run_bots.ps1  run_final_benchmark.sh  run_fow_benchmark.sh  run_fow_benchmark_azure.sh  run_p5_regression.sh  run_stress_test.sh  run_tests.ps1  run_tests.sh
tests/: CMakeLists.txt
tests/Brain/: KalmanTests.cpp  PriorityEvaluatorTests.cpp
tests/Core/: AsyncSendDispatcherTests.cpp  BotIntegrationTests.cpp  CRC32Tests.cpp  FowScalabilityTests.cpp  GameWorldTests.cpp  InterestManagementTests.cpp  JobSystemTests.cpp  MockTransport.h  NetworkManagerTests.cpp  ProfilerTests.cpp  SessionRecoveryTests.cpp  SpatialGridTests.cpp  VisibilityTrackerTests.cpp
tests/Shared/: BitWriterReaderTests.cpp  DeltaCompressionTests.cpp  HeroSerializerTests.cpp  LoggerTests.cpp  NetworkOptimizerTests.cpp  PacketHeaderTests.cpp  SequenceContextTests.cpp
tests/Transport/: RawUDPTransportTests.cpp
(+16 files in other folders)
